# LoTR_RAG

./: .env.exmple  .gitignore  README.md  pyproject.toml  requirements.txt
Confg/: faiss.yaml  llamafile.yaml
Notebook/: 01_indexing.ipynb  02_1_query_keyword_base_db.ipynb  02_2_query_vec_db.ipynb  03_Naive_Rag.ipynb  indexing.ipynb  page_contents(2).csv  query_keyword_base_db.ipynb  query_vec_db.ipynb
Rag/: main.py  run.py
Rag/Chain/: stuff.py
Rag/Emberd/: hf_emberding.py
Rag/LLM/: llamafile.py
Rag/Prompt/: qa.py
Rag/Retriever/: faiss.py
Rag/Settings/: settings.py
Rag/Store/: faiss.py
Rag/Utils/: utils.py
app/UI/: main.py
app/api/: main.py
